# voice-chat-translator

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py  settings.py
src/domain/: logging.py
